--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "es-main": "^1.2.0",
-    "ramda": "^0.28.0"
+    "ramda": "^0.28.0",
+    "ts-pattern": "^4.0.6"
   }
 }
