chore: update project configuration

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -8,6 +8,13 @@
 			"label": "Build",
 		},
 		{
+			"label": "Install dependencies",
+			"type": "shell",
+			"command": "opam",
+			"args": ["install", ".", "--deps-only", "--working-dir"],
+			"problemMatcher": []
+		},
+		{
 			"label": "Run current file",
 			"type": "shell",
 			"command": "dune",
